# Laboratory

./: Laboratory.kdev4  README
.kdev4/: Laboratory.kdev4
Client/: CMakeLists.txt  README
Client/.kdev4/: Client.kdev4
Client/src/: .client.cpp.kate-swp  addemployee.cpp  addemployee.h  addemployee.ui  auth.cpp  auth.h  auth.ui  client.cpp  client.h  client.ui  main.cpp
Server/: .gitignore  CMakeLists.txt  Server.kdev4
Server/src/: .databasemanager.cpp.kate-swp  .logger.cpp.kate-swp  databasemanager.cpp  databasemanager.h  logger.cpp  logger.h  loglevel.h  logoutput.h  logoutputconsole.cpp  logoutputconsole.h  logoutputfile.cpp  logoutputfile.h  main.cpp  server.cpp  server.h
